--- a/public/index.css
+++ b/public/index.css
@@ -33,6 +33,10 @@ p {
     color: white;
     border-radius: 10px;
     padding: 8px 5px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
-
+    
+form {
+    margin-left: 10px; 
+}
