--- a/public/index.css
+++ b/public/index.css
@@ -34,3 +34,14 @@ p {
     align-items: center;
 }
 
+.contact-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.form-inline {
+    margin: 0;
+}
+
+
